Style: Fixed alignment of the main in mobile version.

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -3,6 +3,7 @@
 
   display: grid;
   grid-template-columns: 1fr;
+  align-items: start;
   gap: 1.5rem;
 
   padding-inline: 1rem;
